--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col1">
-                    <img src="/project/portfolio/photo/Raj.jpg">
+                    <img src="photo/Raj.jpg">
                 </div>
                 <div class="about-col2">
                     <h1 class="SubTitle" >About Me</h1>
@@ -110,7 +110,7 @@
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="/project/portfolio/photo/shiva.webp">
+                    <img src="photo/shiva.webp">
                     <div class="layer">
                         <h3>Social Media App</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -119,7 +119,7 @@
                 </div>
 
                 <div class="work">
-                    <img src="/project/portfolio/photo/shiva.webp">
+                    <img src="photo/shiva.webp">
                     <div class="layer">
                         <h3>Medicare Website</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -128,7 +128,7 @@
                 </div>
 
                 <div class="work">
-                    <img src="/project/portfolio/photo/shiva.webp">
+                    <img src="photo/shiva.webp">
                     <div class="layer">
                         <h3>JIO </h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
