--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </nav>
             <div class="header-text">
                 
-                <h1>Hi ! I'm <span id="name">Raj Kr Gupta </span></h1>
+                <h1>Hi ! I'm <span id="name">Raj Kumar Gupta </span></h1>
                 <p>Frontend Developer</p>
             </div>
         </div>
