--- a/index.html
+++ b/index.html
@@ -41,7 +41,14 @@
                 </div>
                 <div class="about-col2">
                     <h1 class="SubTitle" >About Me</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptate incidunt delectus vero deserunt ullam? Quas incidunt repellendus maiores, ut id eos aut nam accusamus iure aspernatur, assumenda vero eveniet. Harum vitae repellat qui, quisquam excepturi porro molestias ipsum, laudantium fuga est nihil aspernatur? Totam corporis possimus sit consequatur voluptatum ipsam non molestiae, officiis molestias neque natus dolore doloribus dolores! Laborum eum fuga accusantium quasi sed in consequatur a! Dolores nesciunt ab iure dolorum necessitatibus laborum rem esse quam vero?</p>
+                    <p>
+👋 Hello there! I'm Raj Kumar Gupta, a passionate Computer Science student embarking on the exciting journey of turning lines of code into innovative solutions. 💻
+
+🎓 Recently Completed my degree in B.Tech (CSE), I thrive on challenges that push my coding skills to new heights. From problem-solving to software development, I'm enthusiastic about every aspect of this dynamic field.
+
+🌐 As a tech enthusiast, I constantly explore emerging technologies and love bringing ideas to life through code. Whether it's creating web applications or diving into algorithms, I find joy in the intricate dance of logic and creativity.
+
+🚀 Join me as I navigate the ever-evolving world of technology, seeking new opportunities to learn, grow, and make a meaningful impact.</p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
 
