--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
                 <div class="work">
                     <img src="photo/shiva.webp">
                     <div class="layer">
-                        <h3>Social Media App</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <h3>Task Manager</h3>
+                        <p>The To-Do List project is a simple but practical application that allows users to manage their tasks and stay organized. Users can add, edit, and delete tasks, mark them as completed, and filter tasks based on their status (completed or pending).</p>
+                        <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
 
