--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="layer">
                         <h3>Task Manager</h3>
                         <p>The To-Do List project is a simple but practical application that allows users to manage their tasks and stay organized. Users can add, edit, and delete tasks, mark them as completed, and filter tasks based on their status (completed or pending).</p>
-                        <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://github.com/jmdrajgupta/Task-Manager"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
 
