--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                 <div class="about-col2">
                     <h1 class="SubTitle" >About Me</h1>
                     <p>
-👋 Hello there! I'm Raj Kumar Gupta, a passionate Computer Science student embarking on the exciting journey of turning lines of code into innovative solutions. 💻
+👋 Hello there! I'm Raj Kumar Gupta, a passionate Computer Science student embarking on the exciting journey of turning lines of code into innovative solutions. 💻<br>
 
-🎓 Recently Completed my degree in B.Tech (CSE), I thrive on challenges that push my coding skills to new heights. From problem-solving to software development, I'm enthusiastic about every aspect of this dynamic field.
+🎓 Recently Completed my degree in B.Tech (CSE), I thrive on challenges that push my coding skills to new heights. From problem-solving to software development, I'm enthusiastic about every aspect of this dynamic field.<br>
 
-🌐 As a tech enthusiast, I constantly explore emerging technologies and love bringing ideas to life through code. Whether it's creating web applications or diving into algorithms, I find joy in the intricate dance of logic and creativity.
+🌐 As a tech enthusiast, I constantly explore emerging technologies and love bringing ideas to life through code. Whether it's creating web applications or diving into algorithms, I find joy in the intricate dance of logic and creativity.<br>
 
 🚀 Join me as I navigate the ever-evolving world of technology, seeking new opportunities to learn, grow, and make a meaningful impact.</p>
                     <div class="tab-titles">
