--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#" class="button">See More</a>
+            <a href="https://jmdrajgupta.github.io/Portfolio.github.io/" class="button">See More</a>
 
         </div>
     </div>
