--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <a href="https://www.hackerrank.com/profile/jmdrajkumargupt1"><i class="fa-brands fa-hackerrank"></i></a>
                  </div>
 
-                 <a href="/project/portfolio/photo/Raj kumar Gupta.pdf" download class="button button2">Download CV</a>
+                 <a href="photo/Raj kumar Gupta.pdf" download class="button button2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
