--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
 
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/gsap.min.js" integrity="sha512-7Au1ULjlT8PP1Ygs6mDZh9NuQD0A5prSrAUiPHMXpU6g3UMd8qesVnhug5X4RoDr35x5upNpx0A6Sisz1LSTXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 
   <script>
@@ -237,7 +237,10 @@
         .catch(error => console.error('Error!', error.message))
     })
   </script>
-
+<script>
+    gsap.from("<p>",{ color="pink", duration:5 })
+    
+</script>
 
 </body>
 </html>
